--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -57,17 +57,17 @@ SIfig_NEON_all = "S1"
 SIfig_NEON_all_legend <- "Figure S1. Vertical gradients in micrometeorological conditions for all forested sites in the National Ecological Observatory Network (NEON)"
 
 #Word count
-w_intro=369
-w_biophys=1515
-w_tleaf=749
-w_traits= 2392
-w_met=941
-w_ecol=1357
+w_intro=367
+w_biophys=1519
+w_tleaf=794
+w_traits= 2390
+w_met=991
+w_ecol=1361
 w_vertgradients=w_biophys+w_tleaf+w_traits+w_met+w_ecol
-w_imp_gc=1071
+w_imp_gc=1042
 w_imp_modeling_scaling=1173
 w_implications=w_imp_gc+w_imp_modeling_scaling
-w_conclusions=247
+w_conclusions=231
 w_total=w_intro+w_vertgradients+w_implications+w_conclusions
 
 ```
@@ -111,7 +111,7 @@ Kristina J. Anderson-Teixeira^1,3^*
 Text | word count | other | n
 ---|---|-----|--------------------
 Total word count (excluding summary, references and legends) | 	`r w_total` |	No. of figures | 	6 (all colour)
-Summary|  	200 | 	No. of Tables | 	2  
+Summary|  	199 | 	No. of Tables | 	2  
 Introduction|	`r w_intro` |	No of Supporting Information files | 	6
 Review of vertical gradients |	`r w_vertgradients`	||	 
 Implications |	`r w_implications`	 ||
@@ -187,7 +187,7 @@ The intensity of visible and photosynthetically active radiation (PAR, 400-700nm
 Canopy foliage absorbs a large portion of PAR (400-700nm), and selectively filters light, thereby altering the spectrum of PAR received in the lower canopy and understory layers. 
 The ratio of red (~685-690 nm) to far red (~730-740 nm) light declines along with total PAR with increasing depth in the canopy, and understories receive diffuse light enriched in near infrared radiation [700-1000 nm, @decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
 Mid-canopies and understories experience a highly dynamic light environment due to sunflecks, or brief increases in direct solar radiation, caused by small canopy gaps, wind-induced canopy movements or the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].
-This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests, than in forests with more open upper canopies, including many conifer forests [Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; <!--@aussenacInteractionsForestStands2000a-->; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
+This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests, than in forests with more open upper canopies, including many conifer forests [Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; <!--@aussenacInteractionsForestStands2000a--> @tymenQuantifyingMicroenvironmentalVariation2017; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
 This light gradient drives variation in leaf temperature (section 2), traits (section 3), and photosynthesis (section 4.2).
 
 ### 1.3 Turbulent transport and wind
@@ -231,7 +231,7 @@ In contrast, in the lower canopy, greater RH (reduced VPD) and lower wind speeds
 Leaves in these normally-shaded locations can experience rapid light and temperature surges during sunflecks [>10°C, @waySunflecksTreesForests2012].
 
 
-![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, *T~leaf~* - *T~air~*, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf characteristic dimension, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under hypothetical moist and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, the independent variable was allowed to vary while other parameters were held constant at the values given in the table of biophysical constants. Dots along each line correspond to the biophysical constant assigned for the independent variable in the other scenarios, and therefore represent the modeled value for *T~leaf~* - *T~air~* with all parameters set to the biophysical constants given in the table. Biohphysical constants in the the table include: shortwave radiation (swr), wind speed (ws), relative humidity (rh), leaf characteristic dimension (lcd), stomatal conductance (gs), air temperature (tair). ](leaf_energy_balance/fig3_leafenergy.png)
+![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, *T~leaf~* - *T~air~*, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf characteristic dimension, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under hypothetical moist and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, the independent variable was allowed to vary while other parameters were held constant at the values given in the table of biophysical constants. Dots along each line correspond to the biophysical constant assigned for the independent variable in the other scenarios, and therefore represent the modeled value for *T~leaf~* - *T~air~* with all parameters set to the biophysical constants given in the table. Biohphysical constants in the the table include: shortwave radiation (swr), wind speed (ws), relative humidity (*RH*), leaf characteristic dimension (lcd), stomatal conductance (*g~s~*), air temperature (*T~air~*). ](leaf_energy_balance/fig3_leafenergy.png)
 
 
 
@@ -300,7 +300,7 @@ $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 
 Sun leaves have anatomical, morphological, and physiological traits that reduce *T~leaf~* through higher conductance (*g~b~* or maximal *g~s~*) and/or reflectance (Table `r table_leaf_traits`). 
 Thus, sun leaves are generally smaller and thicker, with higher LMA, and are more deeply lobed [Fig. `r fig_leaf_T`, @vogelSunLeavesShade1968; @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @leighInfluenceLeafSize2017], but with greater leaf packing and clumping (which reduces *g~b~*).
 Steeper leaf angles reduce mid-day radiation loads and thereby decrease *T~leaf~* - *T~air~* [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988], while higher trichome density increases reflectance, also decreasing radiation load.
-Further, sun leaves tend to have higher stomatal and vein densities, which fascilitate evaporative cooling by enabling higher *g~s~* [section 4.1, @zwienieckiHydraulicLimitationsImposed2004]. 
+Further, sun leaves tend to have higher stomatal and vein densities, which facilitate evaporative cooling by enabling higher *g~s~* [section 4.1, @zwienieckiHydraulicLimitationsImposed2004]. 
 Yet sun leaves also have adaptations to limit water stress, particularly in drier climates, including greater cuticle thickness and higher trichome density [which may reduce or increase *g~b~*, @schreuderModelledInfluencesNonexchanging2001; @ichieEcologicalDistributionLeaf2016a].
 In contrast, shade leaves have traits that maximize light capture (e.g., lower LMA and greater light absorptance per unit biomass), but larger leaves and lower transpiration make them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013]. 
 In open canopies, where light is comparatively homogeneous, leaf traits may be shaped more by maximum *T~air~* and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
@@ -420,7 +420,7 @@ However, water supply cannot meet the demands caused by the high radiation and *
 These constraints tend to reduce leaf water potential, making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and $\delta^{13}C$ (section 3.3, Table `r table_leaf_traits`).
 Stomatal depression reduces transpirational cooling (Fig. `r fig_leaf_T`e), thus amplifying the warming of sun leaves by high radiation [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
 The temperature at which *g~s~* is greatest, *T~opt~* of *g~s~*, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in *g~s~* in response to rising *T~air~* (driven by increased VPD) than lower-canopy shade leaves [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021]. 
-Available data also suggest that high *T~air~* can directly drive stomatal opening, if vapor pressure is experimentally adjusted in tandem with *T~air~* to keep VPD constant [@fredeenTemperatureHumidityEffects1999a; @mottStomatalResponsesHumidity2010; @urbanStomatalConductanceIncreases2017a], though it appears that the negative effect of temperature on *g~s~*, mediated by VPD, generally overrides the positive effect of temperature per *se* in nature, causing *g~s~* to decline when the leaf warms.
+Available data also suggest that high *T~air~* can directly drive stomatal opening, if vapor pressure is experimentally adjusted in tandem with *T~air~* to keep VPD constant [@fredeenTemperatureHumidityEffects1999a; @mottStomatalResponsesHumidity2010; @urbanStomatalConductanceIncreases2017a], though it appears that the negative effect of temperature on *g~s~*, mediated by VPD, generally overrides the positive effect of temperature *per se* in nature, causing *g~s~* to decline when the leaf warms.
 
 ### 4.2. Photosynthesis
 
@@ -460,7 +460,7 @@ Tree metabolism and growth are shaped by crown location in the vertical gradient
 Tree height, crown volume, and foliage biomass all scale with diameter at breast height (DBH), which strongly predicts tree transpiration  [@meinzerWaterTransportTrees2001;@kunertRevisedHydrologicalModel2017; @anderson-teixeiraSizerelatedScalingTree2015] photosynthesis, and intra-canopy trait variation [@binLeafTraitExpression2022].
 Specifically, increases are linked to greater leaf area and the increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where leaves receive more light and have higher leaf area-specific photosynthesis (Table `r table_leaf_metabolism`).
 Photosynthate production is allocated among functions including respiration, aboveground woody growth, foliar turnover, root growth and allocation to root-associated microorganisms, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
-Among these, the best-studied process is aboveground woody growth, which consumes only a modest fraction of total photosynthate [~1/6 on the ecosystem level, @anderson-teixeiraCarbonCyclingMature2021] but, is critically important to long-term forest dynamics and carbon cycling because woody tissues have a long residence time in the ecosystem [@russellResidenceTimesDecay2014].
+Among these, the best-studied process is aboveground woody growth, which consumes only a modest fraction of total photosynthate [~1/6 on the ecosystem level, @anderson-teixeiraCarbonCyclingMature2021], but is critically important to long-term forest dynamics and carbon cycling because woody tissues have a long residence time in the ecosystem [@russellResidenceTimesDecay2014].
 Radial stem growth may increase or decrease over time as trees grow in DBH depending on the light environment [@anderson-teixeiraJointEffectsClimate2022].
 In open forests and for open-growth individual trees, growth rate declines with DBH, whereas growth rate consistently increases with DBH for trees established in the understory of a closed-canopy forest [@muller-landauTestingMetabolicEcology2006; @anderson-teixeiraSizerelatedScalingTree2015;@anderson-teixeiraJointEffectsClimate2022]. 
 This points to a dominant role of vertical profiles in the biophysical environment, particularly light, in shaping tree growth rates within forests. 
@@ -488,7 +488,7 @@ However, under well-watered conditions conducive to high *g~s~*, we do not neces
 Indeed, there are cases where tree-ring records show more negative or less positive *T~air~*-responses of understory trees compared to canopy dominants [@anderson-teixeiraJointEffectsClimate2022; @rollinsonClimateSensitivityUnderstory2020].
 Additional research is required to understand the mechanisms underlying these intriguing differences, and to disentangle size-related tree growth responses to hot-wet versus hot-dry conditions. 
 
-![**Figure `r fig_treerings`. Examples of tree-ring evidence for greater interannual temperature sensitivity of annual growth for large than for small trees.** Across three sites and species, trees with large diameter at breast height (DBH) had more negative growth responses to high maximum temperature (*T~max~*) or potential evapotranspiration (PET) than did small trees of the same species. Independent variables are the most influential temperature-related variable at the site (*T~max~* or PET over a seasonal window spanning from the noted beginning to end month, where "c" and "p" represent months in the current and previous calendar year, respectively). Colored lines represent responses  of trees at the maximum and minimum tails of the DBH distribution included in the analysis to the temperature variable in a model including a DBH - temperature interaction. Other model terms are held constant at their mean. Transparent ribbons indicate 95% confidence intervals. From @anderson-teixeiraJointEffectsClimate2022.](tree_rings/tree_ring_figure.png)
+![**Figure `r fig_treerings`. Examples of tree-ring evidence for greater interannual temperature sensitivity of annual growth for large than for small trees.** Across three sites and species, trees with large diameter at breast height (DBH) had more negative growth responses to high maximum temperature (*T~max~*) or potential evapotranspiration (PET) than did small trees of the same species. Independent variables are the most influential temperature-related variable at the site (*T~max~* or PET over a seasonal window spanning from the noted beginning to end month, where "c" and "p" represent months in the current and previous calendar year, respectively). Colored lines represent responses  of trees at the maximum and minimum tails of the DBH distribution included in the analysis to the temperature variable in a model including a DBH - temperature interaction. Other model terms are held constant at their mean. Transparent ribbons indicate 95% confidence intervals. Redrawn from @anderson-teixeiraJointEffectsClimate2022.](tree_rings/tree_ring_figure.png)
 
 
 ### 5.2. C and water flux
@@ -547,7 +547,7 @@ Thus, canopies are becoming increasingly prone to disturbance and gap formation,
 Such changes often enhance growth of smaller trees, which benefit from increased light [@hoganDroughtInterannualVariability2019;@bennettLargerTreesSuffer2015; @nunesForestFragmentationImpacts2022], and wetter forests can prove quite resilient to canopy disturbance [@millerReducedImpactLogging2011].
 However, this shift to hotter and drier microclimates makes some forests more susceptible to further disturbances, for example, increasing fire risk [@brandoAbruptIncreasesAmazonian2014; @aragao21stCenturyDroughtrelated2018]. 
 Severe degradation can cause dramatic ecological state changes (e.g., the transition of tropical forests more open, savanna-like vegetation) and non-linear threshold responses in energy balance and associated microclimates, with implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020].
-Such dynamics will likely to be amplified by warming, such that climate change is pushing some of the world's forests into alternative stable states wherein forest can persist as long as the canopy remains largely intact, but may not recover and persist after severe canopy disturbance [@tepleyVulnerabilityForestLoss2017; @millerAlternativeStableEquilibria2019; @mcdowellPervasiveShiftsForest2020; @floresFloodplainsAchillesHeel2017].
+Such dynamics are likely to be amplified by warming, such that climate change is pushing some of the world's forests into alternative stable states wherein forest can persist as long as the canopy remains largely intact, but may not recover and persist after severe canopy disturbance [@tepleyVulnerabilityForestLoss2017; @millerAlternativeStableEquilibria2019; @mcdowellPervasiveShiftsForest2020; @floresFloodplainsAchillesHeel2017].
 
 Canopy disturbance poses an increasing threat to the biodiversity of understory species that are otherwise buffered from climatic extremes [@scheffersMicrohabitatsReduceAnimal2013a; @greiserHidingClimateCharacterizing2019]. 
 Canopy structure affects understory species composition, which has been shown to shift under warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020].
@@ -612,7 +612,7 @@ However, uncertainty remains about how temperature sensitivity of foliar gas exc
 Similarly, much remains unknown about how crown exposure influences the temperature sensitivity of woody stem growth. 
 While most available data suggest that large canopy trees are the most vulnerable to warming when water is limited, far less is known about the responses of understory trees. 
 
-As climate changes, patterns and processes across vertical gradients will likely to shift as well.
+As climate changes, patterns and processes across vertical gradients will likely shift as well.
 In the historical climates to which trees adapted, the canopy was an advantageous place for photosynthesis and growth. 
 However, as temperatures increase, it is likely that exposed canopy positions will become increasingly physiologically stressful.
 Ensuant increased mortality of canopy trees will create ever more gaps, changing understory conditions and community composition.
