--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -6055,28 +6055,23 @@
   keywords = {10.21973/N3C08R,Evolution of seed dispersal,fire,Plant Sciences,ReserveID = 32 Sedgwick Reserve,Scatter hoarding,Seedling establishment,Serotiny}
 }
 
-@article{johnstonWhatLiesVertical2020,
-  title = {What {{Lies Beneath}}: {{Vertical Heterogeneity}} in {{Vegetation Canopy Temperatures}}},
-  shorttitle = {What {{Lies Beneath}}},
-  author = {Johnston, M. and Andreu, A. and Verfaillie, J. and Baldocchi, D. D. and Moorcroft, P. R.},
-  date = {2020-12-01},
-  volume = {2020},
-  pages = {B088-03},
-  url = {https://ui.adsabs.harvard.edu/abs/2020AGUFMB088...03J},
-  urldate = {2021-08-05},
-  abstract = {Canopy temperature exerts fundamental controls on plant-level physiological processes such as photosynthesis, respiration, transpiration, and growth and development, and consequently on ecosystem fluxes of carbon, water, and energy. New thermal remote sensing instruments and algorithms are offering unprecedented measurements of surface canopy temperature across space and time. However, airborne and satellite sensors only measure canopies from above, and the vertical heterogeneity of canopy temperatures remains largely unexplored. We combined data from the ECOSTRESS mission, lidar, and a FLIR thermal camera deployed in a Californian woodland savanna to answer the following questions: (1) What is the vertical heterogeneity of tree canopy temperature in a Mediterranean woodland savanna, and how does it vary diurnally, seasonally, and in response to environmental conditions?, and (2) How do blue oak (Quercus douglasii) tree canopy temperatures as measured by ECOSTRESS correspond with FLIR-measured, vertically-resolved temperatures? At any particular time, locations within a single blue oak canopy can vary by more than 4°C, while the difference in temperature between the top quarter and bottom quarter of the canopy can range ±2°C. Canopy temperatures are considerably more homogeneous at night and at other times with low incoming solar radiation. Comparisons with the newly-available ECOSTRESS thermal measurements will also be presented. Based on results from the thermal imaging camera, we predict that ECOSTRESS measurements are a good proxy for bulk canopy temperature under conditions of low incoming radiation, but are comparatively non-representative of canopy temperature when the temperature at the bottom of the canopy is significantly warmer or cooler than the temperature at the top, such as when the understory grass is dry, hot, and strongly radiating.},
-  eventtitle = {{{AGU Fall Meeting Abstracts}}},
-  keywords = {0414 Biogeochemical cycles,0416 Biogeophysics,0426 Biosphere/atmosphere interactions,0476 Plant ecology,and modeling,BIOGEOSCIENCES,processes}
-}
-
-@article{johnstonWhatLiesVerticalinpress,
-  title = {What Lies beneath: {{Vertical}} Heterogeneity in Blue Oak Canopy Temperatures.},
-  author = {Johnston, M. R. and A. Andreu, and J. Verfaillie, D. Baldocchi, {and} P. R. Moorcroft.},
-  year = {in press},
-  journaltitle = {Remote Sensing of Environment.},
-  url = {https://mail.google.com/mail/u/0/#inbox/FMfcgzGmvBlCSgSrhswnJSVCVMTtMnGV?projector=1&messagePartId=0.1},
-  urldate = {2022-02-19},
-  file = {/Users/nidhivinod/Zotero/storage/5C5B8HIH/Your manuscript citation - nidrup@gmail.com - Gmai.pdf}
+@article{johnstonWhatLiesVertical2022a,
+  title = {What Lies beneath: {{Vertical}} Temperature Heterogeneity in a {{Mediterranean}} Woodland Savanna},
+  shorttitle = {What Lies Beneath},
+  author = {Johnston, Miriam R. and Andreu, Ana and Verfaillie, Joseph and Baldocchi, Dennis and Moorcroft, Paul R.},
+  date = {2022-06-01},
+  journaltitle = {Remote Sensing of Environment},
+  shortjournal = {Remote Sensing of Environment},
+  volume = {274},
+  pages = {112950},
+  issn = {0034-4257},
+  doi = {10.1016/j.rse.2022.112950},
+  url = {https://www.sciencedirect.com/science/article/pii/S0034425722000645},
+  urldate = {2022-06-29},
+  abstract = {As the availability of satellite and airborne thermal infrared remote sensing (TIR-RS) data increases and their spatial, temporal, and spectral resolutions improve, researchers are finding diverse applications for TIR-RS measurements. TIR-RS is now commonly applied in regional- and continental-scale analyses, such as those focused on fire and surface energy balance. However, its application lags in plant physiology and ecology, for which a finer-scale understanding of plant canopy temperatures would be useful to elucidate plant water dynamics, for example. In particular, while methods to disaggregate TIR-RS pixels in horizontal space have advanced, possible vertical stratification of plant canopy temperature and its implications for understanding the correspondence between TIR-RS and finer-scale, field-based thermal measurements (e.g. made with a thermal camera) remain unexplored. Here, we use data from a thermal camera deployed concurrently with the recent ECOSTRESS mission to quantify vertical temperature gradients within tree canopies and temperatures of over- vs. under-story plants in a Mediterranean woodland savanna. We then leverage diverse ancillary data to maximize the geometric comparability of ECOSTRESS and thermal camera measurements, in order to assess the extent to which the two forms of thermal measurements correspond. Specifically, we ask: (1) What are the patterns of intra-canopy and over- vs. under-story vertical temperature in a Mediterranean woodland savanna?, and (2) How can vertically-resolved, but spatially-limited field-based temperature measurements be reconciled with spatially-extensive, but surface-only, temperature measurements of a space-borne remote sensor? We found consistent patterns of vertical thermal heterogeneity both within tree canopies and between ecosystem over- and under-stories. The daytime difference between the top and bottom thirds of blue oak canopies was, on average, 0.48~°~C – and sometimes several times larger. Notably, canopy tops are cooler, likely associated with the under-story grass reaching daytime temperatures often exceeding over-story temperatures by 10°~C. Given the consistency of the intra-canopy temperature gradients, we expected the ECOSTRESS sensor would be in better agreement with camera measurements of canopy tops than bulk canopies or canopy bottoms. However, within-canopy gradients were overwhelmed by other sources of disagreement between the measurements, in part associated with upscaling camera measurements across space. Overall, thermal camera and ECOSTRESS measurements were largely in agreement at night (pixel RMSE~=~1.1°C), but they were more divergent during times of low (but {$>$}0 W/m2) and high incoming solar radiation (daytime pixel RMSE~=~3.5°C).},
+  langid = {english},
+  keywords = {Canopy temperature,ECOSTRESS,Thermal camera,Vertical gradient,Woodland savanna},
+  file = {/Users/nidhivinod/Zotero/storage/VVVPU32P/Johnston et al. - 2022 - What lies beneath Vertical temperature heterogene.pdf}
 }
 
 @article{jonesManagingRedPine2019,
