--- a/response-to-editorial-requests.Rmd
+++ b/response-to-editorial-requests.Rmd
@@ -100,7 +100,13 @@ Figures can also be set from other formats including PowerPoint; please send the
 
 Let me know if there are any important elements (colours, layout and spacing, symbols etc) of the figures that should be retained and if you have specific instructions that you would like the Illustrator to take on board.
 
+- **It will generally be fine to adjust colors, layout, and spacing on the figures.**
+
+- **We would like to retain the background painting in Figure 1 (by the lead author)**
+
 I confirm that Figs 1–6 will appear in colour in the published article.
+
+**Okay.**
 
 ## 3)      Supporting Information (Fig. S1, Methods S1–S3, Notes S1 and Table S1 – uploaded as as a separate Word file)
 
@@ -130,6 +136,8 @@ Please address the following point.
 
 ## 5) Licence/copyright form: 
 please note that you will be contacted by the publisher in due course regarding the licence/copyright form for your article. Once your article has been received by Wiley for production you will receive an email from Wiley’s Author Services system which will ask you to log in and will present you with the appropriate license for completion. If you have any questions, please do not hesitate to get in touch with us directly. Note, your article cannot be published until the publisher has received the appropriate signed license agreement.
+
+**Okay, we will deal with this promptly when received.**
 
 ## 6) Data Deposition
 Finally, we remind authors that new sequence data should be deposited in the EMBL/GenBank/DDBJ Nucleotide Sequence Databases, and accession numbers should be included in the final publication. In addition, please note that New Phytologist requires authors to ensure that data integral to the paper is available to readers in a form which allows for verification and replication of the results in the paper. For full details please refer to the author guidelines: https://nam02.safelinks.protection.outlook.com/?url=https%3A%2F%2Fnph.onlinelibrary.wiley.com%2Fhub%2Fjournal%2F14698137%2Fabout%2Fauthor-guidelines&amp;data=05%7C01%7CTeixeiraK%40si.edu%7Ca48e6afee6224253138208da7528be6f%7C989b5e2a14e44efe93b78cdd5fc5d11c%7C0%7C0%7C637951116144876893%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&amp;sdata=g2wQGlViohQQ%2BL9F6b9WoWkOsurgYVyF5Fd4yj%2Bcumk%3D&amp;reserved=0.
