--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -79,11 +79,11 @@ w_total=w_intro+w_vertgradients+w_implications+w_conclusions
 
 Nidhi Vinod^1,2^
 
-Martijn Slot^3^ (ORCID: 0000-0002-5558-1792; Twitter: @martijn_slot; Facebook: martijn.slot.52)
+Martijn Slot^3^ (ORCID: 0000-0002-5558-1792; Twitter: martijn_slot; Facebook: martijn.slot.52)
 
-Ian R. McGregor^4^ (ORCID: 0000-0002-5763-021X; Twitter: @ecoterrestrian)
+Ian R. McGregor^4^ (ORCID: 0000-0002-5763-021X; Twitter: ecoterrestrian)
 
-Elsa M. Ordway^2,5^ (ORCID: 0000-0002-7720-1754; Twitter: @ElsaOrdway)
+Elsa M. Ordway^2,5^ (ORCID: 0000-0002-7720-1754; Twitter: ElsaOrdway)
 
 Marielle N. Smith^6^
 
@@ -91,9 +91,9 @@ Tyeen C. Taylor^7^
 
 Lawren Sack^2^
 
-Thomas N. Buckley^8^ (ORCID: 0000-0001-7610-7136; Twitter: @TomBuckleyLab)
+Thomas N. Buckley^8^ (ORCID: 0000-0001-7610-7136; Twitter: TomBuckleyLab)
 
-Kristina J. Anderson-Teixeira^1,3^* (Orcid ID : 0000-0001-8461-9713; Twitter: @K_A_Teixeira)
+Kristina J. Anderson-Teixeira^1,3^* (Orcid ID : 0000-0001-8461-9713; Twitter: K_A_Teixeira)
 
 
 
