--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -453,6 +453,7 @@
   journaltitle = {Frontiers in Plant Science},
   shortjournal = {Front. Plant Sci.},
   volume = {8},
+  pages = {6--10},
   publisher = {{Frontiers}},
   issn = {1664-462X},
   doi = {10.3389/fpls.2017.00309},
