--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2211,7 +2211,7 @@
   author = {Christoffersen, Bradley O and Gloor, Manuel and Fauset, Sophie and Fyllas, Nikolaos M and Galbraith, David R and Baker, R and Kruijt, Bart and Rowland, Lucy and Fisher, Rosie A and Binks, Oliver J and Sevanto, Sanna and Xu, Chonggang and Jansen, Steven and Choat, Brendan and Mencuccini, Maurizio and McDowell, Nate G and Meir, Patrick},
   date = {2016},
   journaltitle = {Geosci. Model Dev.},
-  pages = {29},
+  pages = {4241--4244},
   langid = {english},
   file = {/Users/nidhivinod/Zotero/storage/RNUYERLJ/Christoffersen et al. - 2016 - Linking hydraulic traits to tropical forest functi.pdf}
 }
