--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3482,6 +3482,7 @@
   date = {2020-03},
   journaltitle = {Frontiers in Forests and Global Change},
   volume = {3},
+  pages = {5--9},
   issn = {2624-893X},
   doi = {10.3389/ffgc.2020.00025},
   url = {https://www.frontiersin.org/article/10.3389/ffgc.2020.00025/full},
