--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -6869,6 +6869,7 @@
   journaltitle = {Global Biogeochemical Cycles},
   volume = {19},
   number = {1},
+  pages = {5--25},
   issn = {1944-9224},
   doi = {10.1029/2003GB002199},
   url = {http://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2003GB002199},
