--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -6889,6 +6889,7 @@
   journaltitle = {Global Biogeochemical Cycles},
   volume = {19},
   number = {1},
+  pages = {5--25},
   issn = {1944-9224},
   doi = {10.1029/2003GB002199},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1029/2003GB002199},
@@ -9205,6 +9206,7 @@
   journaltitle = {AoB PLANTS},
   volume = {11},
   number = {6},
+  pages = {3--8},
   doi = {10.1093/aobpla/plz054},
   url = {http://academic.oup.com/aobpla/article/11/6/plz054/5666155},
   urldate = {2020-06-12},
