--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1050,7 +1050,7 @@
   shortjournal = {Proc Natl Acad Sci USA},
   volume = {118},
   number = {21},
-  pages = {e2003169118},
+  pages = {4--7},
   issn = {0027-8424, 1091-6490},
   doi = {10.1073/pnas.2003169118},
   url = {http://www.pnas.org/lookup/doi/10.1073/pnas.2003169118},
