--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1070,6 +1070,7 @@
   number = {21},
   eprint = {34001597},
   eprinttype = {pmid},
+  pages = {4--7},
   publisher = {{National Academy of Sciences}},
   issn = {0027-8424, 1091-6490},
   doi = {10.1073/pnas.2003169118},
@@ -4120,6 +4121,7 @@
   date = {2021-05-05},
   journaltitle = {Oecologia},
   shortjournal = {Oecologia},
+  pages = {5--11},
   issn = {0029-8549, 1432-1939},
   doi = {10.1007/s00442-021-04924-9},
   url = {https://link.springer.com/10.1007/s00442-021-04924-9},
@@ -4136,6 +4138,8 @@
   date = {2021-05-05},
   journaltitle = {Oecologia},
   shortjournal = {Oecologia},
+  volume = {197},
+  pages = {5--11},
   issn = {1432-1939},
   doi = {10.1007/s00442-021-04924-9},
   url = {https://doi.org/10.1007/s00442-021-04924-9},
@@ -4152,6 +4156,8 @@
   date = {2021-05-05},
   journaltitle = {Oecologia},
   shortjournal = {Oecologia},
+  volume = {197},
+  pages = {5--11},
   issn = {1432-1939},
   doi = {10.1007/s00442-021-04924-9},
   url = {https://doi.org/10.1007/s00442-021-04924-9},
