--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -9013,6 +9013,8 @@
   date = {2021-01-08},
   journaltitle = {Oecologia},
   shortjournal = {Oecologia},
+  volume = {197},
+  number = {885–902},
   issn = {1432-1939},
   doi = {10.1007/s00442-020-04813-7},
   url = {https://doi.org/10.1007/s00442-020-04813-7},
