--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1805,6 +1805,8 @@
   journaltitle = {Frontiers in Forests and Global Change},
   shortjournal = {Front. For. Glob. Change},
   volume = {1},
+  number = {11},
+  pages = {6--10},
   publisher = {{Frontiers}},
   issn = {2624-893X},
   doi = {10.3389/ffgc.2018.00011},
