--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2126,6 +2126,7 @@
   journaltitle = {Frontiers in Plant Science},
   shortjournal = {Front. Plant Sci.},
   volume = {11},
+  number = {735},
   publisher = {{Frontiers}},
   issn = {1664-462X},
   doi = {10.3389/fpls.2020.00735},
