--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2127,6 +2127,7 @@
   shortjournal = {Front. Plant Sci.},
   volume = {11},
   number = {735},
+  pages = {4--9},
   publisher = {{Frontiers}},
   issn = {1664-462X},
   doi = {10.3389/fpls.2020.00735},
@@ -5263,8 +5264,8 @@
   author = {Heilman, Kelly A. and Dietze, Michael C. and Arizpe, Alexis A. and Aragon, Jacob and Gray, Andrew and Shaw, John D. and Finley, Andrew O. and Klesse, Stefan and DeRose, R. Justin and Evans, Margaret E. K.},
   date = {2022},
   journaltitle = {Global Change Biology},
-  volume = {n/a},
-  number = {n/a},
+  volume = {28},
+  number = {11},
   issn = {1365-2486},
   doi = {10.1111/gcb.16038},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.16038},
