--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1675,10 +1675,12 @@
   file = {/Users/nidhivinod/Zotero/storage/EAR5ZSVX/Buckley and Schymanski - 2014 - Stomatal optimisation in relation to atmospheric C.pdf}
 }
 
-@misc{burgessRegressionsLeafTraits2006,
+@article{burgessRegressionsLeafTraits2006,
   title = {Regressions of Leaf Traits},
   author = {Burgess, Stephen S. O. and Dawson, Todd E. and Burgess, Stephen S. O.},
   date = {2006},
+  journaltitle = {New Phytologist},
+  volume = {174},
   abstract = {Predicting the limits to tree height using statistical},
   file = {/Users/nidhivinod/Zotero/storage/DNISHEJ2/Burgess et al. - 2006 - regressions of leaf traits.pdf}
 }
