--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1681,6 +1681,7 @@
   date = {2006},
   journaltitle = {New Phytologist},
   volume = {174},
+  number = {626–636},
   abstract = {Predicting the limits to tree height using statistical},
   file = {/Users/nidhivinod/Zotero/storage/DNISHEJ2/Burgess et al. - 2006 - regressions of leaf traits.pdf}
 }
