--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1682,7 +1682,11 @@
   journaltitle = {New Phytologist},
   volume = {174},
   number = {626–636},
+  pages = {1--11},
+  doi = {10.1111/j.1469-8137.2007.02017.x},
+  url = {https://pubmed.ncbi.nlm.nih.gov/17447917/},
   abstract = {Predicting the limits to tree height using statistical},
+  langid = {english},
   file = {/Users/nidhivinod/Zotero/storage/DNISHEJ2/Burgess et al. - 2006 - regressions of leaf traits.pdf}
 }
 
