--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4826,6 +4826,7 @@
   eprint = {TpAxAQAAMAAJ},
   eprinttype = {googlebooks},
   publisher = {{Macmillan and Company, limited}},
+  location = {{London}},
   langid = {english},
   pagetotal = {804}
 }
@@ -8480,7 +8481,8 @@
   author = {McDowell, N.G. and Bond, B.J. and Hill, L. and Ryan, M.G. and Whitehead, D.},
   date = {2011},
   pages = {255--286},
-  publisher = {{Springer Publishing}}
+  publisher = {{Springer Publishing}},
+  location = {{New York: Springer}}
 }
 
 @article{mcgregor_tree_nodate,
