--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5202,6 +5202,7 @@
   author = {Harris, Nancy L. and Medina, Ernesto},
   date = {2013},
   journaltitle = {Ecological Bulletins},
+  volume = {169--179},
   number = {54},
   eprint = {26796812},
   eprinttype = {jstor},
@@ -5759,8 +5760,10 @@
   title = {Climate {{Change}} 2021 {{The Physical Science Basis--IPCC}}},
   author = {IPCC},
   date = {2021},
+  doi = {10.1017/9781009157896.},
   url = {https://www.ipcc.ch/report/ar6/wg1/downloads/report/IPCC_AR6_WGI_Full_Report.pdf},
   urldate = {2021-08-24},
+  langid = {english},
   file = {/Users/nidhivinod/Zotero/storage/GWPYJKJG/IPCC_AR6_WGI_Full_Report.pdf;/Users/nidhivinod/Zotero/storage/NNHQ9D5E/IPCC_AR6_WGI_Full_Report.pdf;/Users/nidhivinod/Zotero/storage/QVS8HZLX/ar6-wg1-20210809-pr.html}
 }
 
