--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5761,7 +5761,7 @@
   author = {IPCC},
   date = {2021},
   journaltitle = {Cambridge University Press},
-  doi = {10.1017/9781009157896.},
+  doi = {10.1017/9781009157896},
   url = {https://www.ipcc.ch/report/ar6/wg1/downloads/report/IPCC_AR6_WGI_Full_Report.pdf},
   urldate = {2021-08-24},
   langid = {english},
