--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -11024,6 +11024,7 @@
   title = {Scientific Outcome of the {{IPBES-IPCC}} Co-Sponsored Workshop on Biodiversity and Climate Change},
   author = {Pörtner, Hans-Otto and Scholes, Robert J. and Agard, John and Archer, Emma and Arneth, Almut and Bai, Xuemei and Barnes, David and Burrows, Michael and Chan, Lena and Cheung, Wai Lung (William) and Diamond, Sarah and Donatti, Camila and Duarte, Carlos and Eisenhauer, Nico and Foden, Wendy and Gasalla, Maria A. and Handa, Collins and Hickler, Thomas and Hoegh-Guldberg, Ove and Ichii, Kazuhito and Jacob, Ute and Insarov, Gregory and Kiessling, Wolfgang and Leadley, Paul and Leemans, Rik and Levin, Lisa and Lim, Michelle and Maharaj, Shobha and Managi, Shunsuke and Marquet, Pablo A. and McElwee, Pamela and Midgley, Guy and Oberdorff, Thierry and Obura, David and Osman Elasha, Balgis and Pandit, Ram and Pascual, Unai and Pires, Aliny P. F. and Popp, Alexander and Reyes-García, Victoria and Sankaran, Mahesh and Settele, Josef and Shin, Yunne-Jai and Sintayehu, Dejene W. and Smith, Peter and Steiner, Nadja and Strassburg, Bernardo and Sukumar, Raman and Trisos, Christopher and Val, Adalberto~Luis and Wu, Jianguo and Aldrian, Edvin and Parmesan, Camille and Pichs-Madruga, Ramon and Roberts, Debra C. and Rogers, Alex D. and Díaz, Sandra and Fischer, Markus and Hashimoto, Shizuka and Lavorel, Sandra and Wu, Ning and Ngo, Hien},
   date = {2021-06-24},
+  journaltitle = {IPBES and IPCC},
   doi = {10.5281/zenodo.5101125},
   url = {https://zenodo.org/record/5101125},
   urldate = {2021-08-26},
