--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -7852,7 +7852,7 @@
   author = {Lowman, Margaret and Rinker, H. Bruce},
   date = {1995-01-01},
   volume = {19},
-  location = {{New York}},
+  location = {{Academic, New York}},
   isbn = {978-0-12-457553-0}
 }
 
