--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -7021,6 +7021,25 @@
   file = {/Users/nidhivinod/Zotero/storage/RYTSJUI8/Kunert et al. - 2017 - A revised hydrological model for the Central Amazo.pdf;/Users/nidhivinod/Zotero/storage/9KUSA3AM/S0168192317300825.html}
 }
 
+@article{kunertSummerTemperaturesReach2021,
+  title = {Summer Temperatures Reach the Thermal Tolerance Threshold of Photosynthetic Decline in Temperate Conifers},
+  author = {Kunert, N. and Hajek, P. and Hietz, P. and Morris, H. and Rosner, S. and Tholen, D.},
+  date = {2021},
+  journaltitle = {Plant Biology},
+  volume = {n/a},
+  number = {n/a},
+  pages = {4--7},
+  issn = {1438-8677},
+  doi = {10.1111/plb.13349},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/plb.13349},
+  urldate = {2022-08-31},
+  abstract = {Climate change-related environmental stress has been recognized as a driving force in accelerating forest mortality over the last decades in Central Europe. Here, we aim to elucidate the thermal sensitivity of three native conifer species, namely Norway spruce (Picea abies), Scots pine (Pinus sylvestris) and silver fir (Abies alba), and three non-native species, namely Austrian pine (Pinus nigra), Douglas fir (Pseudotsuga menziesii) and Atlas cedar (Cedrus atlantica). Thermal sensitivity, defined here as a decline of the maximum quantum yield of photosystem II (Fv/Fm) with increasing temperature, was measured under varying levels of heat stress and compared with the turgor loss point (πtlp) as a drought resistance trait. We calculated three different leaf thermotolerance traits: the temperature at the onset (5\%) of the Fv/Fm decline (T5), the temperature at which Fv/Fm was half the maximum value (T50) and the temperature at which only 5\% Fv/Fm remained (T95). T5 ranged from 38.5 ± 0.8 °C to 43.1 ± 0.6 °C across all species, while T50 values were at least 9 to 11 degrees above the maximum air temperatures on record for all species. Only Austrian pine had a notably higher T5 value than recorded maximum air temperatures. Species with higher T5 values were characterized by a less negative πtlp compared to species with lower T5. The six species could be divided into ‘drought-tolerant heat-sensitive’ and ‘drought-sensitive heat-tolerant’ groups. Exposure to short-term high temperatures thus exhibits a considerable threat to conifer species in Central European forest production systems.},
+  langid = {english},
+  keywords = {Conifers,heat stress,physiological limitations,tree mortality,water stress},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/plb.13349},
+  file = {/Users/nidhivinod/Zotero/storage/W4HGURBH/Kunert et al. - Summer temperatures reach the thermal tolerance th.pdf}
+}
+
 @article{kunertSummerTemperaturesReachinpress,
   title = {Summer Temperatures Reach the Thermal Tolerance Threshold of Potosynthetic Decline in Temperate Confiers},
   author = {Kunert, Norbert},
