--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -13103,21 +13103,23 @@
   file = {/Users/nidhivinod/Zotero/storage/JD6H7JWM/Slot et al. - 2019 - Photosynthetic heat tolerance of shade and sun lea.pdf}
 }
 
-@article{slotPhotosyntheticPlasticityTropical2021,
-  title = {Photosynthetic Plasticity of a Tropical Tree Species, {\textsc{ }}{{{\textsc{{\emph{Tabebuia}}}}}}{\textsc{{\emph{ Rosea}}}}{\textsc{ }} , in Response to Elevated Temperature and [ {\textsc{ }}{{{\textsc{CO}}}}{\textsc{ }}{\textsc{{\textsubscript{2}}}}{\textsc{ }} ]},
-  shorttitle = {Photosynthetic Plasticity of a Tropical Tree Species,},
+@article{slotPhotosyntheticPlasticityTropical2021a,
+  title = {Photosynthetic Plasticity of a Tropical Tree Species, {{Tabebuia}} Rosea, in Response to Elevated Temperature and [{{CO2}}]},
   author = {Slot, Martijn and Rifai, Sami W. and Winter, Klaus},
-  date = {2021-03-29},
+  date = {2021},
   journaltitle = {Plant, Cell \& Environment},
-  shortjournal = {Plant Cell Environ},
-  pages = {pce.14049},
-  issn = {0140-7791, 1365-3040},
+  volume = {44},
+  number = {7},
+  pages = {2347--2364},
+  issn = {1365-3040},
   doi = {10.1111/pce.14049},
-  url = {https://onlinelibrary.wiley.com/doi/10.1111/pce.14049},
-  urldate = {2021-06-15},
-  abstract = {Atmospheric and climate change will expose tropical forests to conditions they have not experienced in millions of years. To better understand the consequences of this change we studied photosynthetic acclimation of the neotropical tree species Tabebuia rosea to combined 4°C warming and twice-ambient (800 ppm) CO2. We measured temperature responses of the maximum rates of ribulose 1,5-bisphosphate carboxylation (VCMax), photosynthetic electron transport (JMax), net photosynthesis (PNet), and stomatal conductance (gs), and fitted the data using a probabilistic Bayesian approach. To evaluate short-term acclimation plants were then switched between treatment and control conditions and re-measured after 1–2 weeks. Consistent with acclimation, the optimum temperatures (TOpt) for VCMax, JMax and PNet were 1–5°C higher in treatment than in control plants, while photosynthetic capacity (VCMax, JMax, and PNet at TOpt) was 8–25\% lower. Likewise, moving control plants to treatment conditions moderately increased temperature optima and decreased photosynthetic capacity. Stomatal density and sensitivity to leaf-to-air vapor pressure deficit were not affected by growth conditions, and treatment plants did not exhibit stronger stomatal limitations. Collectively, these results illustrate the strong photosynthetic plasticity of this tropical tree species as even fully-developed leaves of saplings transferred to extreme conditions partially acclimated.},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/pce.14049},
+  urldate = {2022-08-31},
+  abstract = {Atmospheric and climate change will expose tropical forests to conditions they have not experienced in millions of years. To better understand the consequences of this change, we studied photosynthetic acclimation of the neotropical tree species Tabebuia rosea to combined 4°C warming and twice-ambient (800 ppm) CO2. We measured temperature responses of the maximum rates of ribulose 1,5-bisphosphate carboxylation (VCMax), photosynthetic electron transport (JMax), net photosynthesis (PNet), and stomatal conductance (gs), and fitted the data using a probabilistic Bayesian approach. To evaluate short-term acclimation plants were then switched between treatment and control conditions and re-measured after 1–2 weeks. Consistent with acclimation, the optimum temperatures (TOpt) for VCMax, JMax and PNet were 1–5°C higher in treatment than in control plants, while photosynthetic capacity (VCMax, JMax, and PNet at TOpt) was 8–25\% lower. Likewise, moving control plants to treatment conditions moderately increased temperature optima and decreased photosynthetic capacity. Stomatal density and sensitivity to leaf-to-air vapour pressure deficit were not affected by growth conditions, and treatment plants did not exhibit stronger stomatal limitations. Collectively, these results illustrate the strong photosynthetic plasticity of this tropical tree species as even fully developed leaves of saplings transferred to extreme conditions partially acclimated.},
   langid = {english},
-  file = {/Users/nidhivinod/Zotero/storage/PBWF5GMP/slot_etal2021_pce_accepted.pdf}
+  keywords = {acclimation,climate change,global warming,JMax,photosynthetic temperature response,stomatal conductance,tropical forest,VCMax,VPD},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.14049},
+  file = {/Users/nidhivinod/Zotero/storage/X5PRCVRY/Slot et al. - 2021 - Photosynthetic plasticity of a tropical tree speci.pdf}
 }
 
 @article{slotSituTemperatureResponse2017,
