--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2508,6 +2508,13 @@
   file = {/Users/nidhivinod/Zotero/storage/47B3B5MX/2013 - Copyright.pdf}
 }
 
+@article{CoreTeam2021,
+  title = {R {{Core Team}} (2021). {{R}}:  {{A}} Language and Environment for Statistical Computing. {{R Foundation}} for {{Statistical Computing}}, {{Vienna}}, {{Austria}}.},
+  url = {https://www.R-project.org/.},
+  urldate = {2022-09-01},
+  file = {/Users/nidhivinod/Zotero/storage/NNDCLMKA/4.1.html}
+}
+
 @article{corlettImpactsWarmingTropical2011,
   title = {Impacts of Warming on Tropical Lowland Rainforests},
   author = {Corlett, Richard T.},
@@ -13918,6 +13925,14 @@
   url = {https://academic.oup.com/view-large/195588519},
   urldate = {2020-11-16},
   file = {/Users/nidhivinod/Zotero/storage/J6QWUGKJ/195588519.html}
+}
+
+@article{teamCoreTeam20212021,
+  title = {R {{Core Team}} (2021). {{R}}:  {{A}} Language and Environment for Statistical Computing. {{R Foundation}} for {{Statistical Computing}}, {{Vienna}}, {{Austria}}.},
+  author = {Team, R Core},
+  date = {2021},
+  url = {https://www.r-project.org/},
+  urldate = {2022-09-01}
 }
 
 @online{TemperatureResponseC3,
